Add fade in animations for job content on scroll down

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="screen screen-work" id="work">
     <div class="container">
-      <div class="row">
+      <div class="row" id="row-work-1">
         <div class="col-xs-12 col-md-9 col-lg-8">
           <h2><a href="https://www.iav.com" target="_blank">IAV GmbH</a> <small>Software Engineer</small></h2>
           <ul style="list-style-type: dash">
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" id="row-work-2">
         <div class="col-xs-12 col-md-9 col-lg-8">
           <h2><a href="http://egr.uri.edu/ecc" target="_blank">University of Rhode Island</a> <small>System Administrator</small></h2>
           <ul style="list-style-type: dash">
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" id="row-work-3">
         <div class="col-xs-12 col-md-9 col-lg-8">
           <h2><a href="https://www.mtv-gifhorn-ski.de" target="_blank">MTV Gifhorn Ski/Snowboard</a> <small>Website Development</small></h2>
           <ul style="list-style-type: dash">
@@ -108,5 +108,8 @@
     <p>Handmade with <span class="fa fa-heart animated pulse infinite"></span> by Brian Kintz - Copyright 2016</p>
     <p class="text-credit">Cover photo by Daniel Lodahl</p>
   </footer>
+
+  <script src="res/js/vendor/noframework.waypoints.min.js"></script>
+  <script src="res/js/main.min.js"></script>
 </body>
 </html>
