Improve text and styling of the about section

--- a/index.html
+++ b/index.html
@@ -78,27 +78,25 @@
   <div class="screen screen-about" id="about">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12">
-          <h1>Who I Am</h1>
-          <p>I'm a software engineer and web developer currently living in Germany.</p>
-          <p>At work I handle everything from software planning and development to design and server administration.</p>
-          <p>On the weekends I ski, swim, cook, sail, volunteer, climb rocks, and tinker with assorted projects.</p>
+        <div class="col-xs-12 col-md-10 col-lg-9">
+          <h1>Who am I?</h1>
+          <p>I'm Brian Kintz, a software engineer and web developer based in Germany.</p>
+          <p>Professionally I cover the whole technology stack: from servers, microcontrollers, virtualization and database design up through application and UI design and development. The best projects involve integrating many different layers together...for example an <a href="https://github.com/elmugrat/led_cube">LED cube</a> or <a href="https://github.com/elmugrat/smart_mirror">smart mirror</a>.</p>
+          <p>Away from the computer I'm a ski instructor and EMT and love to sail/swim/bike, cook, and just relax and enjoy life.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <hr>
-          <p>
-            <a href="https://www.facebook.com/bkintz" target="_blank">
-              <span class="fa fa-2x fa-facebook"></span>
-            </a>
-            <a href="https://github.com/elmugrat" target="_blank">
-              <span class="fa fa-2x fa-github"></span>
-            </a>
-            <a href="http://stackoverflow.com/users/362922/brian-kintz" target="_blank">
-              <span class="fa fa-2x fa-stack-overflow"></span>
-            </a>
-          </p>
+          <a class="a-social" href="https://www.facebook.com/bkintz" target="_blank">
+            <span class="fa fa-2x fa-facebook"></span>
+          </a>
+          <a class="a-social" href="https://github.com/elmugrat" target="_blank">
+            <span class="fa fa-2x fa-github"></span>
+          </a>
+          <a class="a-social" href="http://stackoverflow.com/users/362922/brian-kintz" target="_blank">
+            <span class="fa fa-2x fa-stack-overflow"></span>
+          </a>
         </div>
       </div>
     </div>
