Blur a tiny version of the cover image while loading the full image

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 </head>
 <body>
   <div class="screen screen-cover">
-    <div class="animated fadeIn animation-delay-2s">
-      <span class="fa fa-2x fa-angle-down animated pulse infinite animation-delay-3s"></span>
-    </div>
+    <div class="blur"></div>
   </div>
 
   <div class="screen screen-work" id="work">
