--- a/index.html
+++ b/index.html
@@ -11,61 +11,79 @@
   <link rel="stylesheet" href="res/css/styles.min.css">
 </head>
 <body>
-  <div class="screen screen-cover">
-    <div class="blur"></div>
+  <div class="screen" id="cover">
+    <div id="blur"></div>
   </div>
 
-  <div class="screen screen-work" id="work">
+  <div class="screen" id="work">
     <div class="container">
       <div class="row" id="row-work-1">
-        <div class="col-xs-12 col-md-9 col-lg-8">
-          <h2><a href="https://www.iav.com" target="_blank">IAV GmbH</a> <small>Software Engineer</small></h2>
+        <div class="col-12 col-lg-9">
+          <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
+            <a class="mr-3" href="https://www.iav.com" rel="noopener" target="_blank">IAV GmbH</a>
+            <small class="text-muted">Software Engineer</small>
+          </h2>
           <ul>
             <li>Design and development of diagnostic and calibration software for engine control units</li>
             <li>Software licensing and access control</li>
             <li>Server administration</li>
           </ul>
           <hr>
-          <p class="small text-muted">C#, Java, C, C++/CLI, Linux, Oracle, MySQL, Web Development</p>
+          <p class="text-muted">
+            <i class="fa fa-code px-1"></i>
+            <small>C#, Java, C, C++/CLI, Linux, Oracle, MySQL, Web Development</small>
+          </p>
         </div>
-        <div class="hidden-xs hidden-sm col-md-3 col-lg-offset-1 text-center">
-          <a href="https://www.iav.com" target="_blank">
-            <img src="res/img/iav-logo.gif" width="200px" alt="IAV GmbH">
+        <div class="d-none d-lg-inline-block col text-center">
+          <a href="https://www.iav.com" rel="noopener" target="_blank">
+            <img class="mt-3" src="res/img/iav-logo.gif" width="200px" alt="IAV GmbH">
           </a>
         </div>
       </div>
 
       <div class="row" id="row-work-2">
-        <div class="col-xs-12 col-md-9 col-lg-8">
-          <h2><a href="http://egr.uri.edu/ecc" target="_blank">University of Rhode Island</a> <small>System Administrator</small></h2>
+        <div class="col-12 col-lg-9">
+          <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
+            <a class="mr-3" href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">University of Rhode Island</a>
+            <small class="text-muted">System Administrator</small>
+          </h2>
           <ul>
             <li>Linux domain/web/mail server administratrion</li>
             <li>Computer lab planning and maintenance, machine imaging, networking</li>
             <li>Samba domain administration</li>
           </ul>
           <hr>
-          <p class="small text-muted">Linux, Perl, Samba, LDAP, Apache, Sendmail, DNS, Networking</p>
+          <p class="text-muted">
+            <i class="fa fa-terminal px-1"></i>
+            <small>Linux, Perl, Samba, LDAP, Apache, Sendmail, DNS, Networking</small>
+          </p>
         </div>
-        <div class="hidden-xs hidden-sm col-md-3 col-lg-offset-1 text-center">
-          <a href="http://egr.uri.edu/ecc" target="_blank">
+        <div class="d-none d-lg-inline-block col text-center">
+          <a href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">
             <img src="res/img/uri-logo.png" width="200px" alt="University of Rhode Island">
           </a>
         </div>
       </div>
 
       <div class="row" id="row-work-3">
-        <div class="col-xs-12 col-md-9 col-lg-8">
-          <h2><a href="https://www.mtv-gifhorn-ski.de" target="_blank">MTV Gifhorn Ski/Snowboard</a> <small>Website Development</small></h2>
+        <div class="col-12 col-lg-9">
+          <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
+            <a class="mr-3" href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">MTV Gifhorn Ski/Snowboard</a>
+            <small class="text-muted">Website Development</small>
+          </h2>
           <ul>
             <li>Website design and development</li>
             <li>Online course registration and course management</li>
             <li>User management and marketing</li>
           </ul>
           <hr>
-          <p class="small text-muted">HTML/CSS, Bootstrap, PHP, MySQL</p>
+          <p class="text-muted">
+            <i class="fa fa-code px-1"></i>
+            <small>HTML/CSS, Bootstrap, PHP, MySQL</small>
+          </p>
         </div>
-        <div class="hidden-xs hidden-sm col-md-3 col-lg-offset-1 text-center">
-          <a href="https://www.mtv-gifhorn-ski.de" target="_blank">
+        <div class="d-none d-lg-inline-block col text-center">
+          <a href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">
             <img src="res/img/mtv-gifhorn-logo.png" width="125px" alt="MTV Gifhorn">
           </a>
         </div>
@@ -73,7 +91,7 @@
     </div>
   </div>
 
-  <div class="screen screen-about" id="about">
+  <div class="screen" id="about">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-10 col-lg-9">
@@ -83,26 +101,33 @@
           <p>Away from the computer I'm a ski instructor and EMT and love to sail/swim/bike, cook, and just relax and enjoy life.</p>
         </div>
       </div>
+
+      <hr>
+
       <div class="row">
-        <div class="col-xs-12">
-          <hr>
-          <a class="a-social" href="https://www.facebook.com/bkintz" target="_blank">
-            <span class="fa fa-2x fa-facebook"></span>
+        <div class="col d-flex flex-row">
+          <a class="a-social" href="https://www.facebook.com/bkintz" rel="noopener" target="_blank">
+            <i class="fa fa-2x fa-facebook"></i>
           </a>
-          <a class="a-social" href="https://github.com/elmugrat" target="_blank">
-            <span class="fa fa-2x fa-github"></span>
+          <a class="a-social" href="https://www.linkedin.com/in/bkintz" rel="noopener" target="_blank">
+            <i class="fa fa-2x fa-linkedin"></i>
           </a>
-          <a class="a-social" href="http://stackoverflow.com/users/362922/brian-kintz" target="_blank">
-            <span class="fa fa-2x fa-stack-overflow"></span>
+          <a class="a-social" href="https://github.com/elmugrat" rel="noopener" target="_blank">
+            <i class="fa fa-2x fa-github"></i>
+          </a>
+          <a class="a-social" href="http://stackoverflow.com/users/362922/brian-kintz" rel="noopener" target="_blank">
+            <i class="fa fa-2x fa-stack-overflow"></i>
           </a>
         </div>
       </div>
     </div>
   </div>
 
-  <footer>
-    <p>Handmade with <span class="fa fa-heart animated pulse infinite"></span> by Brian Kintz - Copyright 2016</p>
-    <p class="text-credit">Cover photo by Daniel Lodahl</p>
+  <footer class="d-flex align-items-center justify-content-around bg-dark">
+    <div class="text-center">
+      <p>Handmade with <i class="fa fa-heart animated pulse infinite px-1"></i> by Brian Kintz © 2018</p>
+      <p class="text-credit m-0">Cover photo by Daniel Lodahl</p>
+    </div>
   </footer>
 
   <script src="res/js/vendor/noframework.waypoints.min.js"></script>
