Fix bootstap 4 markup

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="screen" id="about">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-10 col-lg-9">
+        <div class="col-12 col-md-10 col-lg-9">
           <h1>Who am I?</h1>
           <p>I'm Brian Kintz, a software engineer and web developer based in Germany.</p>
           <p>Professionally I cover the whole technology stack: from servers, microcontrollers, virtualization and database design up through application and UI design and development. The best projects involve integrating many different layers together...for example an <a href="https://github.com/elmugrat/led_cube">LED cube</a> or <a href="https://github.com/elmugrat/smart_mirror">smart mirror</a>.</p>
