Rewrite texts and improve formatting

--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
         <div class="col-12 col-lg-9">
           <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
             <a class="mr-3" href="https://www.iav.com" rel="noopener" target="_blank">IAV GmbH</a>
-            <small class="text-muted">Software Engineer</small>
+            <small class="text-muted">Software/DevOps Engineer</small>
           </h2>
           <ul>
-            <li>Design and development of diagnostic and calibration software for engine control units</li>
-            <li>Software licensing and access control</li>
-            <li>Server administration</li>
+            <li>Driving the DevOps and agile development revolution</li>
+            <li>Designing the next generation IT landscape</li>
+            <li>Deploying cutting edge technogies to maximize quality and developer happiness</li>
           </ul>
           <hr>
-          <p class="text-muted">
-            <i class="fa fa-code px-1"></i>
-            <small>C#, Java, C, C++/CLI, Linux, Oracle, MySQL, Web Development</small>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-terminal mr-1"></i>
+            <small>Linux, Kubernetes, GitLab, Ansible, Docker</small>
+          </p>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-code mr-1"></i>
+            <small>JavaScript, C#, Java, C/C++, Oracle, MySQL</small>
           </p>
         </div>
         <div class="d-none d-lg-inline-block col text-center">
@@ -44,23 +48,23 @@
       <div class="row" id="row-work-2">
         <div class="col-12 col-lg-9">
           <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
-            <a class="mr-3" href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">University of Rhode Island</a>
-            <small class="text-muted">System Administrator</small>
+            <a class="mr-3" href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">MTV Gifhorn Ski/Snowboard</a>
+            <small class="text-muted">Web Developer</small>
           </h2>
           <ul>
-            <li>Linux domain/web/mail server administratrion</li>
-            <li>Computer lab planning and maintenance, machine imaging, networking</li>
-            <li>Samba domain administration</li>
+            <li>Modern, responsive web design and development</li>
+            <li>Maximize competetive advantage via natural design</li>
+            <li>Streamline management tasks through automation</li>
           </ul>
           <hr>
-          <p class="text-muted">
-            <i class="fa fa-terminal px-1"></i>
-            <small>Linux, Perl, Samba, LDAP, Apache, Sendmail, DNS, Networking</small>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-code mr-1"></i>
+            <small>TypeScript, Angular, Bootstrap, MySQL</small>
           </p>
         </div>
         <div class="d-none d-lg-inline-block col text-center">
-          <a href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">
-            <img src="res/img/uri-logo.png" width="200px" alt="University of Rhode Island">
+          <a href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">
+            <img src="res/img/mtv-gifhorn-logo.png" width="125px" alt="MTV Gifhorn">
           </a>
         </div>
       </div>
@@ -68,23 +72,27 @@
       <div class="row" id="row-work-3">
         <div class="col-12 col-lg-9">
           <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
-            <a class="mr-3" href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">MTV Gifhorn Ski/Snowboard</a>
-            <small class="text-muted">Website Development</small>
+            <a class="mr-3" href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">University of Rhode Island</a>
+            <small class="text-muted">System Administrator</small>
           </h2>
           <ul>
-            <li>Website design and development</li>
-            <li>Online course registration and course management</li>
-            <li>User management and marketing</li>
+            <li>Modernized aging IT infrastructure</li>
+            <li>Migrated existing systems to a unified, managed domain</li>
+            <li>Maintained and optimzed widespread computing facilities</li>
           </ul>
           <hr>
-          <p class="text-muted">
-            <i class="fa fa-code px-1"></i>
-            <small>HTML/CSS, Bootstrap, PHP, MySQL</small>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-terminal mr-1"></i>
+            <small>Linux, LDAP, DNS/Networking, Samba, Apache, Sendmail</small>
+          </p>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-code mr-1"></i>
+            <small>Perl, Bash, HTML/CSS</small>
           </p>
         </div>
         <div class="d-none d-lg-inline-block col text-center">
-          <a href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">
-            <img src="res/img/mtv-gifhorn-logo.png" width="125px" alt="MTV Gifhorn">
+          <a href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">
+            <img src="res/img/uri-logo.png" width="200px" alt="University of Rhode Island">
           </a>
         </div>
       </div>
@@ -95,8 +103,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-10 col-lg-9">
-          <h1>Who am I?</h1>
-          <p>I'm Brian Kintz, a software engineer and web developer based in Germany.</p>
+          <h1 class="mb-4">Hey there!</h1>
+          <p>I'm Brian, a software engineer and web developer based in Germany.</p>
           <p>Professionally I cover the whole technology stack: from servers, microcontrollers, virtualization and database design up through application and UI design and development. The best projects involve integrating many different layers together...for example an <a href="https://github.com/elmugrat/led_cube">LED cube</a> or <a href="https://github.com/elmugrat/smart_mirror">smart mirror</a>.</p>
           <p>Away from the computer I'm a ski instructor and EMT and love to sail/swim/bike, cook, and just relax and enjoy life.</p>
         </div>
