Improve social media icon spacing on small screens

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <hr>
 
       <div class="row">
-        <div class="col d-flex flex-row">
+        <div class="col d-flex flex-row justify-content-around justify-content-md-start">
           <a class="a-social" href="https://www.facebook.com/bkintz" rel="noopener" target="_blank">
             <i class="fa fa-2x fa-facebook"></i>
           </a>
