--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="d-none d-lg-inline-block col text-center">
           <a href="https://www.iav.com" rel="noopener" target="_blank">
-            <img class="mt-3" src="res/img/iav-logo.gif" width="200px" alt="IAV GmbH">
+            <img class="mt-3" src="res/img/logos/iav.gif" width="200px" alt="IAV GmbH">
           </a>
         </div>
       </div>
@@ -64,7 +64,7 @@
         </div>
         <div class="d-none d-lg-inline-block col text-center">
           <a href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">
-            <img src="res/img/mtv-gifhorn-logo.png" width="125px" alt="MTV Gifhorn">
+            <img src="res/img/logos/mtv-gifhorn.png" width="125px" alt="MTV Gifhorn">
           </a>
         </div>
       </div>
@@ -92,7 +92,7 @@
         </div>
         <div class="d-none d-lg-inline-block col text-center">
           <a href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">
-            <img src="res/img/uri-logo.png" width="200px" alt="University of Rhode Island">
+            <img src="res/img/logos/uri.png" width="200px" alt="University of Rhode Island">
           </a>
         </div>
       </div>
