--- a/index.html
+++ b/index.html
@@ -20,6 +20,58 @@
       <div class="row" id="row-work-1">
         <div class="col-12 col-lg-9">
           <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
+            <a class="mr-3" href="https://busnow.com" rel="noopener" target="_blank">B.USnow</a>
+            <small class="text-muted">DevOps Engineer</small>
+          </h2>
+          <ul>
+            <li>Designed and deployed infrastructure for a cloud-native mobility solution</li>
+            <li>Enabled rapid development and fast time to market via automation</li>
+            <li>Collaborated with IT operations to implement modern infrastructure solutions company-wide</li>
+          </ul>
+          <hr>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-terminal mr-1"></i>
+            <small>Kubernetes, GitLab, Docker, Prometheus</small>
+          </p>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-code mr-1"></i>
+            <small>Ansible, Helm, Bash, Python</small>
+          </p>
+        </div>
+        <div class="d-none d-lg-inline-block col text-center">
+          <a href="https://busnow.com" rel="noopener" target="_blank">
+            <img class="mt-3" src="res/img/logos/busnow.png" width="100px" alt="B.USnow">
+          </a>
+        </div>
+      </div>
+
+      <div class="row" id="row-work-2">
+        <div class="col-12 col-lg-9">
+          <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
+            <a class="mr-3" href="https://www.deliveryofthingsworld.com" rel="noopener" target="_blank">Delivery of Things World</a>
+            <small class="text-muted">Guest Speaker</small>
+          </h2>
+          <ul>
+            <li>How we moved from a static waterfall process to automated agile development</li>
+            <li>Reducing overhead and time to delivery while increasing quality</li>
+            <li>Doing the above without breaking the bank</li>
+          </ul>
+          <hr>
+          <p class="text-muted m-0">
+            <i class="fa fa-fw fa-star-o mr-1"></i>
+            <small>DevOps, Agile, Strategy, Success Story</small>
+          </p>
+        </div>
+        <div class="d-none d-lg-inline-block col text-center">
+          <a href="https://www.deliveryofthingsworld.com" rel="noopener" target="_blank">
+            <img class="mt-3" src="res/img/logos/dot.png" width="200px" alt="Delivery of Things World">
+          </a>
+        </div>
+      </div>
+
+      <div class="row" id="row-work-3">
+        <div class="col-12 col-lg-9">
+          <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
             <a class="mr-3" href="https://www.iav.com" rel="noopener" target="_blank">IAV GmbH</a>
             <small class="text-muted">Software/DevOps Engineer</small>
           </h2>
@@ -45,7 +97,7 @@
         </div>
       </div>
 
-      <div class="row" id="row-work-2">
+      <div class="row" id="row-work-4">
         <div class="col-12 col-lg-9">
           <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
             <a class="mr-3" href="https://www.mtv-gifhorn-ski.de" rel="noopener" target="_blank">MTV Gifhorn Ski/Snowboard</a>
@@ -69,7 +121,7 @@
         </div>
       </div>
 
-      <div class="row" id="row-work-3">
+      <div class="row" id="row-work-5">
         <div class="col-12 col-lg-9">
           <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
             <a class="mr-3" href="http://egr.uri.edu/ecc" rel="noopener" target="_blank">University of Rhode Island</a>
