Improve wording of IAV and MTV GF entries

--- a/index.html
+++ b/index.html
@@ -73,21 +73,23 @@
         <div class="col-12 col-lg-9">
           <h2 class="d-flex align-items-baseline flex-column flex-xl-row">
             <a class="mr-3" href="https://www.iav.com" rel="noopener" target="_blank">IAV GmbH</a>
-            <small class="text-muted">Software/DevOps Engineer</small>
+            <small class="text-muted">Software Engineer</small>
           </h2>
           <ul>
-            <li>Driving the DevOps and agile development revolution</li>
-            <li>Designing the next generation IT landscape</li>
-            <li>Deploying cutting edge technogies to maximize quality and developer happiness</li>
+            <li>Drastically increased system reliability by eliminating bottlenecks and decoupling dependent services</li>
+            <li>Implemented time-series monitoring of core systems to aid in development and business decisions</li>
+            <li>Continuously improved development processes to increase quality, efficiency and developer morale</li>
+            <li>Managed the agile development of multiple business-critical applications</li>
+            <li>Developed software tools for the evaluation and calibration of engine diagnostics</li>
           </ul>
           <hr>
           <p class="text-muted m-0">
             <i class="fa fa-fw fa-terminal mr-1"></i>
-            <small>Linux, Kubernetes, GitLab, Ansible, Docker</small>
+            <small>Linux, Kubernetes, GitLab, Jira, Ansible, Docker, Sonarqube, Prometheus, Grafana</small>
           </p>
           <p class="text-muted m-0">
             <i class="fa fa-fw fa-code mr-1"></i>
-            <small>JavaScript, C#, Java, C/C++, Oracle, MySQL</small>
+            <small>C#, Java, C/C++, JavaScript, Python, Oracle, MySQL</small>
           </p>
         </div>
         <div class="d-none d-lg-inline-block col text-center">
@@ -104,9 +106,9 @@
             <small class="text-muted">Web Developer</small>
           </h2>
           <ul>
-            <li>Modern, responsive web design and development</li>
-            <li>Maximize competetive advantage via natural design</li>
-            <li>Streamline management tasks through automation</li>
+            <li>Designed and developed a modern, reposive web application for managing course bookings</li>
+            <li>Measureably improved user experience by simplifying information flow and communication</li>
+            <li>Significanly decreased time spent for management tast via automation and smart tooling</li>
           </ul>
           <hr>
           <p class="text-muted m-0">
