Improve about wording and add profile image

--- a/index.html
+++ b/index.html
@@ -155,12 +155,17 @@
 
   <div class="screen" id="about">
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-10 col-lg-9">
+      <div class="row d-flex justify-content-between align-items-center">
+        <div class="col-12 col-lg-7 col-xl-8">
           <h1 class="mb-4">Hey there!</h1>
-          <p>I'm Brian, a software engineer and web developer based in Germany.</p>
-          <p>Professionally I cover the whole technology stack: from servers, microcontrollers, virtualization and database design up through application and UI design and development. The best projects involve integrating many different layers together...for example an <a href="https://github.com/elmugrat/led_cube">LED cube</a> or <a href="https://github.com/elmugrat/smart_mirror">smart mirror</a>.</p>
+          <p>I'm Brian, a software and devops engineer based in Germany.</p>
+          <p>Professionally I cover the whole technology stack: from servers, microcontrollers, virtualization and database design up through application and UI design and development. The best projects involve automating and integrating many different layers together...for example an <a href="https://github.com/elmugrat/led_cube">LED cube</a> or <a href="https://github.com/elmugrat/smart_mirror">smart mirror</a>.</p>
+          <p>I'm known for my expertise in system infrastructure design, containerization and orchestration, and for spreading my knowledge on fun topics like CI/CD, Docker and Kubernetes.</p>
           <p>Away from the computer I'm a ski instructor and EMT and love to sail/swim/bike, cook, and just relax and enjoy life.</p>
+        </div>
+
+        <div class="col-12 col-lg-4 col-xl-3 text-center">
+          <img src="res/img/bk.jpg" class="img-fluid rounded-circle py-5" alt="Brian Kintz">
         </div>
       </div>
 
