Add instagram link and improve responsiveness of social icons

--- a/index.html
+++ b/index.html
@@ -172,9 +172,12 @@
       <hr>
 
       <div class="row">
-        <div class="col d-flex flex-row justify-content-around justify-content-md-start">
+        <div class="col d-flex justify-content-around justify-content-lg-start">
           <a class="a-social" href="https://www.facebook.com/bkintz" rel="noopener" target="_blank">
             <i class="fa fa-2x fa-facebook"></i>
+          </a>
+          <a class="a-social" href="https://www.instagram.com/daslebendesbrian/" rel="noopener" target="_blank">
+            <i class="fa fa-2x fa-instagram"></i>
           </a>
           <a class="a-social" href="https://www.linkedin.com/in/bkintz" rel="noopener" target="_blank">
             <i class="fa fa-2x fa-linkedin"></i>
