--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Software and DevOps engineer with experience designing and building scalable, cloud-native applications and systems.">
+  <meta name="keywords" content="Brian,Kintz,DevOps,Software,Engineer">
 
   <title>Brian Kintz</title>
 
