Change GitHub link to GitLab

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
           <a class="a-social" href="https://www.linkedin.com/in/bkintz" rel="noopener" target="_blank">
             <i class="fa fa-2x fa-linkedin"></i>
           </a>
-          <a class="a-social" href="https://github.com/elmugrat" rel="noopener" target="_blank">
-            <i class="fa fa-2x fa-github"></i>
+          <a class="a-social" href="https://gitlab.com/bkintz" rel="noopener" target="_blank">
+            <i class="fa fa-2x fa-gitlab"></i>
           </a>
           <a class="a-social" href="http://stackoverflow.com/users/362922/brian-kintz" rel="noopener" target="_blank">
             <i class="fa fa-2x fa-stack-overflow"></i>
