--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <small class="text-muted">Web Developer</small>
           </h2>
           <ul>
-            <li>Designed and developed a modern, reposive web application for managing course bookings</li>
-            <li>Measureably improved user experience by simplifying information flow and communication</li>
-            <li>Significanly decreased time spent for management tast via automation and smart tooling</li>
+            <li>Designed and developed a modern, reponsive web application for managing course bookings</li>
+            <li>Measurably improved user experience by simplifying information flow and communication</li>
+            <li>Significantly decreased time spent for management tasks via automation and smart tooling</li>
           </ul>
           <hr>
           <p class="text-muted m-0">
@@ -134,7 +134,7 @@
           <ul>
             <li>Modernized aging IT infrastructure</li>
             <li>Migrated existing systems to a unified, managed domain</li>
-            <li>Maintained and optimzed widespread computing facilities</li>
+            <li>Maintained and optimized widespread computing facilities</li>
           </ul>
           <hr>
           <p class="text-muted m-0">
